Fix charts overflowing.

--- a/style/pi-hole.css
+++ b/style/pi-hole.css
@@ -210,7 +210,6 @@
 }
 
 .chart-legend {
-  height: 250px;
   overflow: auto;
 }
 
